@@ -1,3 +1,4 @@
+requires 'JSON';
 requires 'Mojolicious';
 requires 'Moo';
 requires 'Try::Tiny';
