@@ -1,4 +1,5 @@
   - Add helper OpenCloset::Common::Unpaid::merchant_uid
+  - Add helper OpenCloset::Common::Unpaid::create_vbank
 
 v0.0.16   Mon, 10 Apr 2017 13:08:02 +0900
   - Add %OpenCloset::Constants::Measurement::AVG_LEG_BY_HEIGHT
